--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello world</p>
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>E-mail</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Marcos Silva</td>
+                <td>marcos@email.com</td>
+            </tr>
+            <tr>
+                <td>Lucas Mayke</td>
+                <td>mayke@email.com</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
