--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
     <title>Document</title>
 </head>
 <body>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>E-mail</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Marcos Silva</td>
-                <td>marcos@email.com</td>
-            </tr>
-            <tr>
-                <td>Lucas Mayke</td>
-                <td>mayke@email.com</td>
-            </tr>
-        </tbody>
-    </table>
+   <form action="">
+    <label>E-mail</label>
+    <input type="email" placeholder="Type your e-mail"/>
+    <br><br>
+
+    <label>Password</label>
+    <input type="password" placeholder="******"/>
+    <br><br>
+
+    <select>
+        <option value="1-18">1-18</option>
+        <option value="19-35">19-35</option>
+        <option value="36-49">36-49</option>
+        <option value="50+">50 or most</option>
+    </select>
+    <br><br>
+
+    <button type="submit">Enter</button>
+   </form>
 </body>
 </html>
