--- a/index.html
+++ b/index.html
@@ -7,24 +7,31 @@
     <title>Document</title>
 </head>
 <body>
-   <form action="">
-    <label>E-mail</label>
-    <input type="email" placeholder="Type your e-mail"/>
-    <br><br>
+   <header>
+    <div class="logo">
+        <img src="images/logo.png" alt="logo"/>
+    </div>
 
-    <label>Password</label>
-    <input type="password" placeholder="******"/>
-    <br><br>
+    <form class="sign-in" action="#">
+        <input type="email" placeholder="Type your e-mail"/>
+        <input type="password"/>
 
-    <select>
-        <option value="1-18">1-18</option>
-        <option value="19-35">19-35</option>
-        <option value="36-49">36-49</option>
-        <option value="50+">50 or most</option>
-    </select>
-    <br><br>
+        <button type="submit">Enter</button>
+    </form>
+   </header>
 
-    <button type="submit">Enter</button>
-   </form>
+   <main>
+    <section class="intro">
+        <h1>
+            Ajudamos <strong> programadores</strong> a conseguirem seus
+            <strong>primeiros empregos</strong>
+        </h1>
+        <p>Mais de 100 mil desenvolvedores já conseguiram o seu primeiro empregos
+        usando nossa plataforma!</p>
+
+        <a href="#">Sou programador</a>
+
+    </section>
+   </main>
 </body>
 </html>
