--- a/index.html
+++ b/index.html
@@ -30,8 +30,46 @@
         usando nossa plataforma!</p>
 
         <a href="#">Sou programador</a>
+        <a href="#">Somos empresa contratando</a>
 
     </section>
+
+        <section class="languages">
+            <h1>Linguagens</h1>
+
+            <div class="cards">
+                <div class="card">Ruby</div>
+                <div class="card">Javascript</div>
+                <div class="card">Elixir</div>
+                <div class="card">Python</div>
+                <div class="card">Go</div>
+            </div>
+        </section>
+
+        <section class="team">
+            <h1>Nosso time</h1>
+
+            <div class="members">
+                <div class="members"><img src="images/team/walter.jpg"/></div>
+                <div class="members"><img src="images/team/jesse.jpg"/></div>
+                <div class="members"><img src="images/team/skyler.jpg"/></div>
+                <div class="members"><img src="images/team/hank.jpg"/></div>
+                <div class="members"><img src="images/team/mike.jpg"/></div>
+                <div class="members"><img src="images/team/saul.jpg"/></div>
+            </div>
+        </section>
+
    </main>
+   <footer>
+        <ul>
+            <li><a href="#">Política de privacidade</a></li>
+            <li><a href="#">Carreira</a></li>
+            <li><a href="#">Linkedin</a></li>
+            <li><a href="#">Youtube</a></li>
+            <li><a href="#">Facebook</a></li>
+        </ul>
+
+        <p>© Massa. Todos os direitos reservados.</p>
+   </footer>
 </body>
 </html>
