Box-model, class and ids

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    </header>
 
    <main>
-    <section class="intro">
+    <section class="intro gray">
         <h1>
             Ajudamos <strong> programadores</strong> a conseguirem seus
             <strong>primeiros empregos</strong>
@@ -49,7 +49,7 @@
             </div>
         </section>
 
-        <section class="team">
+        <section class="team gray">
             <h1>Nosso time</h1>
 
             <div class="members">
