--- a/index.html
+++ b/index.html
@@ -25,45 +25,53 @@
 
    <main>
     <section class="intro gray">
-        <h1>
-            Ajudamos <strong> programadores</strong> a conseguirem seus
-            <strong>primeiros empregos</strong>
-        </h1>
-        <p>Mais de 100 mil desenvolvedores já conseguiram o seu primeiro empregos
-        usando nossa plataforma!</p>
+        <div class="container">
+            <h1>
+                Ajudamos <strong> programadores</strong> a conseguirem seus
+                <strong>primeiros empregos</strong>
+            </h1>
+            <p>Mais de 100 mil desenvolvedores já conseguiram o seu primeiro empregos
+            usando nossa plataforma!</p>
 
-        <a href="#">Sou programador</a>
-        <a href="#">Somos empresa contratando</a>
+            <div class="cta">
+                <a href="#" class="button primary">Sou programador</a>
+            <a href="#" class="button secondary">Somos empresa contratando</a>
+            </div>
 
+        </div>
     </section>
 
         <section class="languages">
-            <h1>Linguagens</h1>
+            <div class="container">
+                <h1 class="title">Linguagens</h1>
 
-            <div class="cards">
-                <div class="card">Ruby</div>
-                <div class="card">Javascript</div>
-                <div class="card">Elixir</div>
-                <div class="card">Python</div>
-                <div class="card">Go</div>
+                <div class="cards">
+                    <div class="card red">Ruby</div>
+                    <div class="card blue">Javascript</div>
+                    <div class="card purple">Elixir</div>
+                    <div class="card yellow">Python</div>
+                    <div class="card green">Go</div>
+                </div>
             </div>
         </section>
 
         <section class="team gray">
-            <h1>Nosso time</h1>
+            <div class="container">
+                <h1 class="title">Nosso time</h1>
 
-            <div class="members">
-                <div class="members"><img src="images/team/walter.jpg"/></div>
-                <div class="members"><img src="images/team/jesse.jpg"/></div>
-                <div class="members"><img src="images/team/skyler.jpg"/></div>
-                <div class="members"><img src="images/team/hank.jpg"/></div>
-                <div class="members"><img src="images/team/mike.jpg"/></div>
-                <div class="members"><img src="images/team/saul.jpg"/></div>
+                <div class="members">
+                    <div class="members"><img src="images/team/walter.jpg"/></div>
+                    <div class="members"><img src="images/team/jesse.jpg"/></div>
+                    <div class="members"><img src="images/team/skyler.jpg"/></div>
+                    <div class="members"><img src="images/team/hank.jpg"/></div>
+                    <div class="members"><img src="images/team/mike.jpg"/></div>
+                    <div class="members"><img src="images/team/saul.jpg"/></div>
+                </div>
             </div>
         </section>
-
    </main>
    <footer>
+    <div class="container">
         <ul>
             <li><a href="#">Política de privacidade</a></li>
             <li><a href="#">Carreira</a></li>
@@ -73,6 +81,7 @@
         </ul>
 
         <p>© Massa. Todos os direitos reservados.</p>
+    </div>
    </footer>
 </body>
 </html>
