--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <li><a href="#">Facebook</a></li>
         </ul>
 
-        <p>© Massa. Todos os direitos reservados.</p>
+        <p class="copyright">© Massa. Todos os direitos reservados.</p>
     </div>
    </footer>
 </body>
