--- a/index.html
+++ b/index.html
@@ -15,29 +15,32 @@
         <img src="images/logo.png" alt="logo"/>
     </div>
 
-    <form class="sign-in" action="#">
-        <input type="email" placeholder="Type your e-mail"/>
-        <input type="password"/>
+    <div class="sign-in">
+        <form  action="#">
+            <input type="email" placeholder="Type your e-mail"/>
+            <input type="password" placeholder="*****"/>
 
-        <button type="submit">Enter</button>
-    </form>
+            <button type="submit" class="button primary">Enter</button>
+        </form>
+    </div>
    </header>
 
    <main>
     <section class="intro gray">
         <div class="container">
-            <h1>
-                Ajudamos <strong> programadores</strong> a conseguirem seus
-                <strong>primeiros empregos</strong>
-            </h1>
-            <p>Mais de 100 mil desenvolvedores já conseguiram o seu primeiro empregos
-            usando nossa plataforma!</p>
+            <div class="hero">
+                <h1>
+                    Ajudamos <strong> programadores</strong> a conseguirem seus
+                    <strong>primeiros empregos</strong>
+                </h1>
+                <p>Mais de 100 mil desenvolvedores já conseguiram o seu primeiro empregos
+                usando nossa plataforma!</p>
 
-            <div class="cta">
-                <a href="#" class="button primary">Sou programador</a>
-            <a href="#" class="button secondary">Somos empresa contratando</a>
+                <div class="cta">
+                    <a href="#" class="button primary">Sou programador</a>
+                <a href="#" class="button secondary">Somos empresa contratando</a>
+                </div>
             </div>
-
         </div>
     </section>
 
